--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.3.4",
     "@astrojs/mdx": "^2.0.3",
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/vercel": "^6.1.1",
-    "astro": "^4.0.8"
+    "astro": "^4.0.8",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.16.0",
